# laba3

./: CMakeLists.txt  main.cpp
include/: array.h  figure.h  figure_prev.h  rectangle.h  square.h  trapezoid.h
src/: array.cpp  figure.cpp  figure_prev.cpp  main.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
tests/: test_figures.cpp
